add parity for d/transact